--- a/projectPrimeFaces/principal/principal-web/.project
+++ b/projectPrimeFaces/principal/principal-web/.project
@@ -3,7 +3,7 @@
   <name>principal-web</name>
   <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects>
-    <project>principal-ejb</project>
+    <project>principal-online</project>
   </projects>
   <buildSpec>
     <buildCommand>
