--- a/projectPrimeFaces/principal/principal-ear/pom.xml
+++ b/projectPrimeFaces/principal/principal-ear/pom.xml
@@ -27,6 +27,11 @@
          <artifactId>principal-ejb</artifactId>
          <type>ejb</type>
       </dependency>
+      <dependency>
+			<groupId>org.empresa</groupId>
+			<artifactId>principal-commun</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
    </dependencies>
 
    <build>
