--- a/projectPrimeFaces/principal/principal-ear/pom.xml
+++ b/projectPrimeFaces/principal/principal-ear/pom.xml
@@ -32,6 +32,12 @@
 			<artifactId>principal-commun</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.12</version>
+    </dependency>
+            
    </dependencies>
 
    <build>
