--- a/projectPrimeFaces/principal/principal-ear/pom.xml
+++ b/projectPrimeFaces/principal/principal-ear/pom.xml
@@ -15,6 +15,18 @@
    <name>principal EAR module</name>
 
    <dependencies>
+   <!-- Para pdf -->
+   <dependency>
+	<groupId>com.lowagie</groupId>
+	<artifactId>itext</artifactId>
+	<version>2.0.7</version>
+</dependency>
+<!-- Para excel -->
+   <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.5-beta1</version>
+    </dependency>
 
       <!-- Depend on the ejb module and war so that we can package them -->
       <dependency>
