--- a/bootstrapProject/saludcoop/administracion/pom.xml
+++ b/bootstrapProject/saludcoop/administracion/pom.xml
@@ -380,6 +380,11 @@
 			<artifactId>primefaces</artifactId>
 			<version>3.4</version>
 		</dependency>
+		<dependency>  
+    	<groupId>org.primefaces.themes</groupId>  
+    		<artifactId>all-themes</artifactId>  
+    		<version>1.0.10</version>  
+		</dependency> 
 	</dependencies>
 	
 	<repositories>
