--- a/bootstrapProject/saludcoop/administracion/src/main/webapp/WEB-INF/web.xml
+++ b/bootstrapProject/saludcoop/administracion/src/main/webapp/WEB-INF/web.xml
@@ -1,21 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
   <display-name>administracion</display-name>
+ 
   <listener>
     <listener-class>com.conexia.saludcoop.listener.SaludCoopAppListener</listener-class>
   </listener>
+
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
-  <listener>
+  
+
+   <listener>
     <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
   </listener>
+  
+    <!-- Add Support for Spring 
+    <listener>
+        <listener-class>
+            org.springframework.web.context.request.RequestContextListener
+        </listener-class>
+    </listener>
+  -->
+ <!-- Parametros de contexto
+ ej:
+ <context-param>
+    	<param-name>AdministratorEmail</param-name>
+    	<param-value>mkyong2002@yahoo.com</param-value>
+</context-param>
+
+ String email= getServletContext().getInitParameter("AdministratorEmail");
+  -->
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
 			/WEB-INF/classes/conexia-context.xml
 		</param-value>
   </context-param>
+<!-- Internacionalizacion -->
   <context-param>
     <param-name>javax.servlet.jsp.jstl.fmt.localizationContext</param-name>
     <param-value>messages</param-value>
@@ -24,6 +46,14 @@
     <param-name>javax.servlet.jsp.jstl.fmt.fallbackLocale</param-name>
     <param-value>es</param-value>
   </context-param>
+  
+
+  <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>bootstrap</param-value>
+   </context-param>
+
+  <!-- Filtro de seguridad -->
   <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -48,6 +78,7 @@
     <filter-name>springSecurityFilterChain</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <!-- 
   <servlet>
     <servlet-name>conexia</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -59,10 +90,14 @@
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
+   -->
+   <!--
   <servlet-mapping>
     <servlet-name>conexia</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
+  -->
+  <!-- Test de prueba -->
   <servlet>
        <servlet-name>StickyCaptcha</servlet-name>
        <servlet-class>nl.captcha.servlet.SimpleCaptchaServlet</servlet-class>
@@ -80,6 +115,7 @@
         <servlet-name>StickyCaptcha</servlet-name>
         <url-pattern>/jcaptcha</url-pattern>
     </servlet-mapping>
+     
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
@@ -88,12 +124,7 @@
   </session-config>
   
   
-    <!-- Add Support for Spring -->
-    <listener>
-        <listener-class>
-            org.springframework.web.context.request.RequestContextListener
-        </listener-class>
-    </listener>
+  
 
     <!-- Change to "Production" when you are ready to deploy -->
     <context-param>
@@ -115,17 +146,4 @@
         <servlet-name>facesServlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
-    
-    <context-param>
-	   <param-name>org.richfaces.enableControlSkinning</param-name>
-	   <param-value>false</param-value>
-	</context-param>
-    <context-param>
-	   <param-name>org.richfaces.enableControlSkinningClasses</param-name>
-	   <param-value>false</param-value>
-	</context-param>
-	<context-param>
-	    <param-name>org.richfaces.skin</param-name>
-	    <param-value>plain</param-value>
-	</context-param>
 </web-app>
