--- a/projectPrimeFaces/branches/proyectoDesarrollo/principal-online/pom.xml
+++ b/projectPrimeFaces/branches/proyectoDesarrollo/principal-online/pom.xml
@@ -116,6 +116,18 @@
 			<version>6.0</version>
 			<scope>provided</scope>
 		</dependency>
+		 <dependency>
+            <groupId>jboss</groupId>
+            <artifactId>jbosssx</artifactId>
+            <version>3.2.3</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jboss</groupId>
+            <artifactId>jboss-jaas</artifactId>
+            <version>3.2.3</version>
+            <scope>provided</scope>
+        </dependency>
 
 	</dependencies>
 
