--- a/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/WEB-INF/web.xml
+++ b/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/WEB-INF/web.xml
@@ -39,34 +39,32 @@
         <location>/index.xhtml</location>
     </error-page>
     
-    <security-constraint>
-		<display-name>Example Security Constraint</display-name>
-		<web-resource-collection>
-			<web-resource-name>Protected Area</web-resource-name>
-			<url-pattern>/*</url-pattern>
-			<http-method>DELETE</http-method>
-			<http-method>GET</http-method>
-			<http-method>POST</http-method>
-			<http-method>PUT</http-method>
-		</web-resource-collection>
-		<auth-constraint>
-			<role-name>user</role-name>
-		</auth-constraint>
-		<user-data-constraint>
-			<transport-guarantee>NONE</transport-guarantee>
-		</user-data-constraint>
-	</security-constraint>
+   <!-- Define a Security Constraint on this Application -->
+  <security-constraint>
+    <web-resource-collection>
+      <web-resource-name>SALES Application</web-resource-name>
+      <url-pattern>/*</url-pattern>
+    </web-resource-collection>
+    <auth-constraint>
+       <role-name>user_role</role-name>
+    </auth-constraint>
+  </security-constraint>
 
-	<login-config>
-		<auth-method>FORM</auth-method>
-		<realm-name>jBossJaasPostgresRealm</realm-name>
-		<form-login-config>
-			<form-login-page>/login.xhtml</form-login-page>
-			<form-error-page>/error.xhtml</form-error-page>
-		</form-login-config>
-	</login-config>
-	<security-role>
-		<description> A user </description>
-		<role-name>user</role-name>
-	</security-role>
+  <!-- Define the Login Configuration for this Application -->
+  <login-config>
+    <auth-method>FORM</auth-method>
+    <realm-name>Tomcat SALES Application</realm-name>
+    <form-login-config>
+       <form-login-page>/login.xhtml</form-login-page>
+       <form-error-page>/error.xhtml</form-error-page>
+    </form-login-config>
+  </login-config>
+
+  <!-- Security roles referenced by this web application -->
+  <security-role>
+    <description>
+      The role a user needs to be allowed to log in to the application
+    </description>
+    <role-name>user_role</role-name>
+  </security-role>
 </web-app>
