--- a/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/WEB-INF/web.xml
+++ b/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,7 @@
         <param-value>true</param-value>
     </context-param>
     <servlet>
+    
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
@@ -28,7 +29,7 @@
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>/index.xhtml</welcome-file>
+        <welcome-file>/pruebas.xhtml</welcome-file>
     </welcome-file-list>
     <error-page>
         <error-code>403</error-code>
@@ -38,33 +39,5 @@
         <exception-type>javax.faces.application.ViewExpiredException</exception-type>
         <location>/index.xhtml</location>
     </error-page>
-    
-   <!-- Define a Security Constraint on this Application -->
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>SALES Application</web-resource-name>
-      <url-pattern>/*</url-pattern>
-    </web-resource-collection>
-    <auth-constraint>
-       <role-name>user_role</role-name>
-    </auth-constraint>
-  </security-constraint>
 
-  <!-- Define the Login Configuration for this Application -->
-  <login-config>
-    <auth-method>FORM</auth-method>
-    <realm-name>Tomcat SALES Application</realm-name>
-    <form-login-config>
-       <form-login-page>/login.xhtml</form-login-page>
-       <form-error-page>/error.xhtml</form-error-page>
-    </form-login-config>
-  </login-config>
-
-  <!-- Security roles referenced by this web application -->
-  <security-role>
-    <description>
-      The role a user needs to be allowed to log in to the application
-    </description>
-    <role-name>user_role</role-name>
-  </security-role>
 </web-app>
