--- a/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/WEB-INF/web.xml
+++ b/projectPrimeFaces/branches/proyectoDesarrollo/principal-web/src/main/webapp/WEB-INF/web.xml
@@ -29,7 +29,7 @@
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
-        <welcome-file>/index.jsf</welcome-file>
+        <welcome-file>index.jsf</welcome-file>
     </welcome-file-list>
     <error-page>
         <error-code>403</error-code>
